# dynamic-hdp

./: .gitignore  .project  CMakeLists.txt  README.md  corpus.h  handle_results.m  hdp.cpp  hdp.h  likelihood_computer.h  main.cpp  running.cpp  running.h  state.cpp  utils.cpp  utils.h
data/: roc_curve_for_synthetic.mat  true_answers_for_synthetic.mat
include/: corpus.h  hdp.h  hdp_dynamic.h  likelihood_computer.h  running.h  state.h  utils.h
src/: corpus.cpp  hdp.cpp  hdp_dynamic.cpp  likelihood_computer.cpp  main.cpp  running.cpp  state.cpp  utils.cpp
